# magnum-bootstrap

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  CONTRIBUTING.md  README.md  build.gradle
modules/: FindCorrade.cmake  FindMagnum.cmake  FindSDL2.cmake
package/ci/: appveyor-desktop-mingw.bat  appveyor-desktop.bat  appveyor-rt.bat  appveyor.yml  circleci.yml  emscripten.sh  travis-android-arm.sh  travis-desktop.sh  travis-emscripten.sh  travis-ios-simulator.sh  travis.yml  unix-desktop.sh
src/: CMakeLists.txt  MacOSXBundleInfo.plist.in  MyApplication.cpp  MyApplication.html  Windows.MSVC2015.appxmanifest  WindowsPhone.MSVC2013.appxmanifest  WindowsPhone.MSVC2015.appxmanifest  WindowsStore.MSVC2013.appxmanifest  WindowsStore.MSVC2015.appxmanifest
src/main/: AndroidManifest.xml
